<resources>
    <string name="app_name">LQMOOC</string>
    <string name="discovery">Discover</string>
    <string name="learn">Learn</string>
    <string name="all_classify">All</string>
    <string name="more">More</string>
    <string name="latest_update">Latest Updates</string>
    <string name="organ_in">Institutions</string>
    <string name="search_hit">Please enter keywords</string>
    <string name="more_press_exit">Press again to exit</string>
    <string name="no_more_data">No more data</string>
    <string name="load_faild_tip">Load fail~\nPage unaccessible</string>
    <string name="reload">Reload</string>
    <string name="pull_up_load_more">Pull up to load more</string>
    <string name="course">Courses</string>
    <string name="teacher">Teachers</string>
    <string name="resource">Resources</string>
    <string name="credential">Certificates</string>
    <string name="all">All</string>
    <string name="price_with_colon">Price:</string>
    <string name="course_status_0">Upcoming</string>
    <string name="course_status_1">Ongoing</string>
    <string name="course_status_2">Over</string>
    <string name="value_error">Data error</string>
    <string name="hottest">Most Popular</string>
    <string name="newest">Latest Updates</string>
    <string name="course_status_all">All</string>
    <string name="course_introduction">Introduction</string>
    <string name="study_plan">Learning Plan</string>
    <string name="course_comment">Reviews</string>
    <string name="progress_on">Available</string>
    <string name="week_all">Totally</string>
    <string name="man">person</string>
    <string name="study">Learn</string>
    <string name="introduction_str0">Introduction</string>
    <string name="introduction_str1">For the Crowd</string>
    <string name="introduction_str2">Learning Target</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_immediately">Buy Now</string>
    <string name="evaluation">Comment</string>
    <string name="evaluation_course">Grade the course:</string>
    <string name="follow_the_teacher">Become his/her Student</string>
    <string name="no_introduction">No introduction available</string>
    <string name="learn_micro_course">Listen-Read Course</string>
    <string name="learn_video">Videos</string>
    <string name="learn_audio">Audios</string>
    <string name="learn_image">Images</string>
    <string name="learn_ppt_or_pdf">PPT/PDF Files</string>
    <string name="other_resource">Other Materials</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_enter_hint">Username/Mobile Number/Email Address</string>
    <string name="get_back_password_account_hint">Please enter your mobile number or email address
    </string>
    <string name="get_back_password_code_hint">Please enter verification code</string>
    <string name="get_back_password_ps1_hint">Please enter new password</string>
    <string name="get_back_password_ps2_hint">Please confirm new password</string>
    <string name="login_process">Logging in...</string>
    <string name="logout_process">Logging out...</string>
    <string name="login_success">Login Succeeded</string>
    <string name="logout_success">Logout Succeeded</string>
    <string name="credential_introduction">Certificate introduction</string>
    <string name="credential_cort">Price</string>
    <string name="condition_get">Application requirement</string>
    <string name="join_stuty_plan">Join</string>
    <string name="joined">Joined/Apply</string>
    <string name="apply_certification">Apply</string>
    <string name="has_apply_to_pay">Buy</string>
    <string name="has_buy_to_pay">Pay</string>
    <string name="has_certification">Awarded</string>
    <string name="recent_search">Recent Searches</string>
    <string name="please_input_key_word">Please enter keywords</string>
    <string name="comment_hint_text">Your comment (Within 200 characters) is very important to us.
    </string>
    <string name="click_to_score">Touch to grade</string>
    <string name="commit_comment">Comment</string>
    <string name="commit_reply">Reply</string>
    <string name="success">Succeeded</string>
    <string name="failed">Failed</string>
    <string name="collect">Favorite</string>
    <string name="tip">Tips</string>
    <string name="course_process">Course Schedule</string>
    <string name="date_format">yyyy-MM-dd-</string>
    <string name="learn_process">Learning Progress:</string>
    <string name="the">the</string>
    <string name="announcement">Announcements</string>
    <string name="exam">Exam</string>
    <string name="homework">Test</string>
    <string name="unit_exam">Test</string>
    <string name="coursetask">Read-Write Task</string>
    <string name="exam_paper">Exam</string>
    <string name="learn_task">Learning Plan</string>
    <string name="scoring_criteria">Rating Scales</string>
    <string name="message">Messages</string>
    <string name="personal_contacts">Contacts</string>
    <string name="class_contacts">Classes</string>
    <string name="schools_of_concern">Institutions</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Order</string>
    <string name="my_collection">Favorites</string>
    <string name="bind_phone">Phone</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="edit_avatar">Change Profile Photo</string>
    <string name="nick_name">Nickname</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="city">Region</string>
    <string name="introduction">Introduction</string>
    <string name="personal_info">My Profile</string>
    <string name="personal_introduction">Self-introduction:</string>
    <string name="camera">Take Photo</string>
    <string name="gallery">Choose from Photos</string>
    <string name="cancle">Cancel</string>
    <string name="select_avatar">Select a profile photo</string>
    <string name="uploading">Uploading...</string>
    <string name="upload">Upload</string>
    <string name="gender_secrecy">Privacy</string>
    <string name="gender_man">Male</string>
    <string name="gender_woman">Female</string>
    <string name="position_city">Location:</string>
    <string name="select_area">Select region</string>
    <string name="notice">Notification</string>
    <string name="private_msg">Message</string>
    <string name="network">Network</string>
    <string name="allow_4g">Allow watching videos using 2G/3G/4G</string>
    <string name="about">About</string>
    <string name="about_product">About Application</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="current_version">Current Version</string>
    <string name="login_out">Log Out</string>
    <string name="confirm_logout">Log out?</string>
    <string name="exit">OK</string>
    <string name="new_friend">New Friends</string>
    <string name="price">Price:</string>
    <string name="rebuy">Rebuy</string>
    <string name="to_pay">Pay</string>
    <string name="delete_order">Delete Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_number">Order No.:</string>
    <string name="order_status_0">Unpaid</string>
    <string name="order_status_1">Completed</string>
    <string name="order_status_2">Closed</string>
    <string name="order_status_3">Paid</string>
    <string name="tutor_order_status_1">Unmarked</string>
    <string name="tutor_order_status_2">Completed</string>
    <string name="tutor_order_status_3">Refund</string>
    <string name="feedback_tip1">Please enter your questions or comments which will keep us
        improving
    </string>
    <string name="feedback_tip2">Please enter your mobile number or QQ number so that we may contact
        you if necessary
    </string>
    <string name="feedback_hint1">Please enter your feedback</string>
    <string name="feedback_hint2">Please enter your contact information</string>
    <string name="commit">Submit</string>
    <string name="agreed">Accept</string>
    <string name="ignore">Decline</string>
    <string name="deal_friend_request">Handle friend requests</string>
    <string name="send_friend_request">Send a friend request</string>
    <string name="add_new_friend">Add Contacts</string>
    <string name="add_as_friend">Add to Contacts</string>
    <string name="send">Send</string>
    <string name="pls_enter_validation_info">Please enter validation message</string>
    <string name="i_am">I\'m</string>
    <string name="want_to_make_friend">sent you a friend request!</string>
    <string name="has">Already</string>
    <string name="attention">followed</string>
    <string name="add_attention">Follow</string>
    <string name="has_attention">Followed</string>
    <string name="make_praise">Like</string>
    <string name="browsing_times">Views</string>
    <string name="all_comment">All Reviews</string>
    <string name="my_courses">My Courses</string>
    <string name="all_teacher">All Teachers</string>
    <string name="all_credential">All Certificates</string>
    <string name="subtotal">Subtotal:</string>
    <string name="commit_order">Submit Order</string>
    <string name="yuan">yuan</string>
    <string name="need_pay">Amount payable:</string>
    <string name="see_teacher_page">Enter Teacher\'s Homepage</string>
    <string name="chat">Chat</string>
    <string name="delete_friend">Delete Contact</string>
    <string name="personal_position">Region:</string>
    <string name="exit_class">Quit the Class</string>
    <string name="student">Students</string>
    <string name="my_course">My Courses</string>
    <string name="hot_recommended">Selected Courses</string>
    <string name="comment">Comment</string>
    <string name="enter_name_please">Please enter your name:</string>
    <string name="enter_personal_intro_please">Please enter your self-introduction:</string>
    <string name="enter_content_please">Please enter your reply!</string>
    <string name="add_organ">Add Institutions</string>
    <string name="has_friend">Available in Contacts</string>
    <string name="has_agreed">Accepted</string>
    <string name="has_ignore">Declined</string>
    <string name="friend">Friends</string>
    <string name="notice_details">Announcement Details</string>
    <string name="score">Score</string>
    <string name="points">points</string>
    <string name="into_homework">Access Test</string>
    <string name="start_homework">Start Test</string>
    <string name="into_task">Access Task</string>
    <string name="into_exam">Access Test</string>
    <string name="view_homework">View Test Result</string>
    <string name="view_exam">View Exam Result</string>
    <string name="not_commit">Unsubmitted</string>
    <string name="not_mark">Unreviewed</string>
    <string name="marked">Score Released</string>
    <string name="message_silent">Do Not Disturb</string>
    <string name="coin_detail">Transactions></string>
    <string name="charge_coin">Top Up</string>
    <string name="charge_count">Top-up Amount:</string>
    <string name="normal_count">Frequent amount:</string>
    <string name="wawa_coin">WaWacoin</string>
    <string name="pay_confirm">Pay</string>
    <string name="pay_type">Pattern of payment:</string>
    <string name="pay_cost">Payment amount:</string>
    <string name="weChat">WeChat</string>
    <string name="ali">Alipay</string>
    <string name="voucher_amount">Voucher Amount</string>
    <string name="voucher_explain">Instructions</string>
    <string name="voucher_explain_1">1.Voucher can only be used to purchase the first chapter of each course on LQWaWa Mini Program in WeChat.\n\n2.Mixed purchase with other chapters are not allowed.\n\n3.Balance can be used in next purchase.\n\n4.No-withdraw，no-transferable.\n\n5.All rights reserved by LQWaWa Information Technology Co. Ltd.</string>
</resources>