<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_user_voucher_radius">

            <TextView
                android:id="@+id/detail_btn"
                style="@style/text_green_xl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:text="@string/coin_detail" />

            <TextView
                style="@style/text_gray_xl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/voucher_amount" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/voucher_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/com_text_red"
                    android:textSize="28sp" />

                <TextView
                    style="@style/text_red_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/voucher_amount"
                    android:layout_marginLeft="4dp"
                    android:layout_toRightOf="@id/voucher_amount"
                    android:text="@string/yuan" />

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            style="@style/text_gray_xl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/voucher_explain" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/com_gray_trans_gradient" />

        <TextView
            style="@style/text_gray_xl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/voucher_explain_1" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>