<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/com_bg_light_white"
              android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="@dimen/top_bar_valid_height"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:text="@string/feedback_tip1"
        style="@style/text_gray_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/com_item_space_xxl"/>

    <com.lqwawa.apps.views.ContainsEmojiEditText
        android:id="@+id/feedback_content_et"
        style="@style/text_gray_xl"
        android:background="@color/com_bg_white"
        android:paddingLeft="@dimen/com_item_space_xxl"
        android:paddingRight="@dimen/com_item_space_xxl"
        android:paddingTop="@dimen/com_item_space_xxxxl"
        android:paddingBottom="@dimen/com_item_space_xxxxl"
        android:inputType="text|textMultiLine"
        android:hint="@string/feedback_hint1"
        android:imeOptions="actionNext"
        android:textCursorDrawable="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/feedback_tip2"
        style="@style/text_gray_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/com_item_space_xxl"/>

    <EditText
        android:id="@+id/connection_number_et"
        style="@style/text_gray_xl"
        android:background="@color/com_bg_white"
        android:paddingLeft="@dimen/com_item_space_xxl"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:paddingRight="@dimen/com_item_space_xxl"
        android:paddingTop="@dimen/com_item_space_xxxxl"
        android:paddingBottom="@dimen/com_item_space_xxxxl"
        android:hint="@string/feedback_hint2"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:textCursorDrawable="@null"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.lqwawa.intleducation.base.widgets.TopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</FrameLayout>