<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.lqwawa.intleducation.base.widgets.TopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/charge_count"
                    android:textColor="#676666"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/count_edittext"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/shape_edittext_bg"
                    android:inputType="number"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wawa_coin"
                    android:textColor="#9c9c9c"
                    android:textSize="16sp"/>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="30dp"
                android:text="@string/normal_count"
                android:textColor="#676666"
                android:textSize="16sp"/>


            <com.lqwawa.lqbaselib.views.MyGridView
                android:id="@+id/normal_count_gridvew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:listSelector="@android:color/transparent"
                android:horizontalSpacing="10dp"
                android:numColumns="3"
                android:padding="@dimen/com_item_space"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="30dp"
                android:text="@string/pay_type"
                android:textColor="#676666"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/ll_wx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selected_pay"
                    android:gravity="center"
                    android:minWidth="120dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/pay_wechat"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/weChat"
                        android:textColor="#4b4b4b"/>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_ali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/unselected_pay"
                    android:gravity="center"
                    android:minWidth="120dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/pay_ali_new"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/ali"
                        android:textColor="#4b4b4b"/>


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_cost"
                    android:textColor="#676666"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/pay_cost_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textColor="#ff7200"
                    android:text="0"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yuan"
                    android:textColor="#8f8f8f"
                    android:textSize="16sp"/>


            </LinearLayout>


            <TextView
                android:id="@+id/pay_confirm_tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="#01913a"
                android:gravity="center"
                android:text="@string/pay_confirm"
                android:textColor="@color/white"
                android:textSize="20sp"/>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>